        - видалено метод logCalculation(..)
    - змінено метод parse:
        - додано метод handleEndOfExpression(..) для обробки кінця виразу.
        - додано метод popRemainingOperators(..) для додавання всіх операторів до стека які залишились.
    - змінено метод handleOperator(..)
        - додано метод popOperatorsByPrecedence(..) для обробки стеку операторів згідно з пріоритетом.
        - додано метод handleCloseBracket(..) для обробки закриваючої дужки, якщо дужки не парні - викидається виняток.

Зміни в Assignment13Part1:
    - видалено конструктор класу ImageLoader, тепер шлях до файлу передається в метод load(..) як параметр.
    - зміни в класі SilhouettesFinder:
        - видалено змінну image з конструктором, тепер зображення передається в метод countSilhouettes(..) як параметр,
          та передається в createSilhouettesMask(..).
        - змінено метод createSilhouettesMask(..), тепер він створює int масив пікселів і передає його в
          BackgroundFinder() та в Eraser() замість BufferedImage.
    - зміни в класі Eraser:
        - видалено змінну image з конструктором, тепер зображення не потрібне в класі, оскільки всі операції виконуються
          з масивом пікселів.
        - в методах separateSilhouettesMask(..) та findBackgroundMask(..) висота та ширина приходять параметром,
          щоб прибрати велику кількість викликів методів getWidth() та getHeight().
        - в методі findBackgroundMask(..) видалено виклик методу getRGB() для кожного пікселя, бо масив пікселів
          приходить параметром від separateSilhouettesMask(..).
    - зміни в класі SimilarPixelFinder:
        - прорахунок квадрата дельти змінено на ціле число для уникнення непотрібних перетворень
      між типами.
    - зміни в класі BackgroundFinder:
        - в методі CalculateColorFrequencies(..) видалено виклик getRGB() для кожного пікселя, бо масив пікселів
          приходить параметром від findBackground(..).