@@ -56,8 +56,10 @@
         - в методі findBackgroundMask(..) видалено виклик методу getRGB() для кожного пікселя, бо масив пікселів
           приходить параметром від separateSilhouettesMask(..).
     - зміни в класі SimilarPixelFinder:
-        - прорахунок квадрата дельти змінено на ціле число для уникнення непотрібних перетворень
-      між типами.
+        - квадрат дельти тепер прораховується в методі isPixelsSimilar(..), щоб прибрати статичний блок.
+        - прорахунок квадрата дельти змінено на ціле число для уникнення непотрібних перетворень між типами.
     - зміни в класі BackgroundFinder:
         - в методі CalculateColorFrequencies(..) видалено виклик getRGB() для кожного пікселя, бо масив пікселів
           приходить параметром від findBackground(..).
+    - зміни в класі BFSSearcher:
+        - в методі runBFS(..) queue замінено на ArrayDeque для можливості зміни методу пошуку з BFS на DFS одним рядком.
